fix form z-index

--- a/css/main.css
+++ b/css/main.css
@@ -22,4 +22,5 @@
     width: 100%;
     padding: 2em;
     text-align: center;
+    z-index: 10;
 }
